style(sidenav): fix caret icon rotation issue

--- a/src/components/Sidenav/sidenav-item.css
+++ b/src/components/Sidenav/sidenav-item.css
@@ -23,6 +23,7 @@ button {
   .caret-icon,
   slot[name="caret-icon"]::slotted(*) {
     margin-left: auto;
+    margin-bottom: auto;
     transition: all 0.3s ease-in-out;
     transform: rotate(180deg);
   }
