style(alert): update warning alert color

--- a/src/components/Alert/alert.css
+++ b/src/components/Alert/alert.css
@@ -3,6 +3,7 @@
 }
 
 :host([variant="warning"]) .alert {
+  --sgds-alert-color: var(--sgds-color-fixed-dark);
   background-color: var(--sgds-warning-surface-default);
 }
 
