--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -12,6 +12,7 @@ input {
   width: var(--sgds-form-width-xs);
   height: var(--sgds-form-height-sm);
 }
+
 .form-check-input {
   appearance: none;
   background-color: var(--sgds-form-surface-default);
@@ -44,7 +45,9 @@ input {
 }
 
 .form-check-input:checked:hover,
-.form-check-input[checked]:hover {
+.form-check-input[checked]:hover,
+.form-check-input:checked:focus,
+.form-check-input[checked]:focus-visible {
   background-color: var(--sgds-form-primary-surface-emphasis);
 }
 
@@ -56,7 +59,9 @@ input {
 }
 
 .form-check-input:indeterminate:hover,
-.form-check-input[indeterminate]:hover {
+.form-check-input[indeterminate]:hover,
+.form-check-input:indeterminate:focus,
+.form-check-input[indeterminate]:focus-visible {
   background-color: var(--sgds-form-primary-surface-emphasis);
 }
 
@@ -68,12 +73,12 @@ input {
 .form-check-input.is-invalid {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-form-danger-border-color-default);
 }
+
 .form-check-input:checked.is-invalid,
-.form-check-input[checked].is-invalid {
-  background-color: var(--sgds-form-danger-surface-default);
-}
+.form-check-input[checked].is-invalid,
 .form-check-input:indeterminate.is-invalid,
 .form-check-input[indeterminate].is-invalid {
+  border: var(--sgds-form-border-width-default) solid var(--sgds-border-color-transparent);
   background-color: var(--sgds-form-danger-surface-default);
 }
 
