--- a/src/components/Link/link.css
+++ b/src/components/Link/link.css
@@ -31,8 +31,6 @@
   cursor: not-allowed;
 }
 
-
-
 :host([variant="danger"]) .nav-link::slotted(a) {
   --sgds-link-color-default: var(--sgds-danger-color-default);
   color: var(--sgds-link-color-default, --sgds-danger-color-default);
@@ -45,14 +43,38 @@
   color: var(--sgds-link-color-emphasis, --sgds-danger-color-emphasis);
 }
 
-:host([size="lg"]) .nav-link::slotted(a) {
-    height: var(--sgds-dimension-32);
-    font-size: var(--sgds-font-size-3) !important;
-
+:host([variant="light"]) .nav-link::slotted(a) {
+  --sgds-link-color-default: var(--sgds-color-fixed-light);
+  color: var(--sgds-link-color-default, --sgds-color-fixed-light);
 }
+
+:host([variant="light"]) .nav-link::slotted(a:hover),
+:host([variant="light"]) .nav-link::slotted(a:focus),
+:host([variant="light"]) .nav-link::slotted(a:focus-visible) {
+  --sgds-link-color-emphasis: var(--sgds-color-fixed-light);
+  color: var(--sgds-link-color-emphasis, --sgds-color-fixed-light);
+}
+
+:host([variant="dark"]) .nav-link::slotted(a) {
+  --sgds-link-color-default: var(--sgds-color-fixed-dark);
+  color: var(--sgds-link-color-default, --sgds-color-fixed-dark);
+}
+
+:host([variant="dark"]) .nav-link::slotted(a:hover),
+:host([variant="dark"]) .nav-link::slotted(a:focus),
+:host([variant="dark"]) .nav-link::slotted(a:focus-visible) {
+  --sgds-link-color-emphasis: var(--sgds-color-fixed-dark);
+  color: var(--sgds-link-color-emphasis, --sgds-color-fixed-dark);
+}
+
+:host([size="lg"]) .nav-link::slotted(a) {
+  height: var(--sgds-dimension-32);
+  font-size: var(--sgds-font-size-3) !important;
+}
+
 :host([size="sm"]) .nav-link::slotted(a) {
-    height: var(--sgds-dimension-20);
-    font-size: var(--sgds-font-size-1) !important;
+  height: var(--sgds-dimension-20);
+  font-size: var(--sgds-font-size-1) !important;
 }
 
 /* Check with Andy if target blank need to auto add an icon */
