--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -34,6 +34,10 @@
   align-items: flex-start;
 }
 
+.stepper.vertical .stepper-item-container:not(:last-child) .stepper-item {
+  margin-bottom: var(--sgds-padding-xl);
+}
+
 .stepper .stepper-item:focus,
 .stepper .stepper-item:focus-visible {
   outline: 0;
@@ -52,7 +56,7 @@
   left: calc(-50% + 16px);
   width: calc(100% - var(--sgds-dimension-32));
   height: var(--sgds-dimension-2);
-  background: var(--sgds-bg-translucent);
+  background: var(--sgds-border-color-translucent);
 }
 
 .stepper.vertical .stepper-item-container:not(:last-child) .stepper-item:after {
@@ -70,7 +74,7 @@
 .stepper.horizontal .stepper-item-container .stepper-item.is-completed:before,
 .stepper.vertical .stepper-item-container .stepper-item.is-completed:after,
 .stepper.vertical .stepper-item-container .stepper-item.is-completed:after {
-  background: var(--sgds-primary-bg-default);
+  background: var(--sgds-primary-border-color-default);
 }
 
 .stepper .stepper-item.is-clickable {
@@ -97,17 +101,25 @@
 
 .stepper.vertical .stepper-detail {
   text-align: left;
-  padding: var(--sgds-padding-2-xs) 0 var(--sgds-padding-xl);
+  padding: var(--sgds-padding-2-xs) 0 0;
 }
 
 .stepper .stepper-item:not(.is-active):not(.is-completed) .stepper-detail {
   color: var(--sgds-color-subtle);
 }
 
-.stepper .stepper-item.is-clickable:hover .stepper-marker {
+.stepper .stepper-item.is-clickable:hover .stepper-marker,
+.stepper .stepper-item.is-clickable:focus .stepper-marker,
+.stepper .stepper-item.is-clickable:focus-visible .stepper-marker {
   background-color: var(--sgds-primary-surface-emphasis);
   border-color: var(--sgds-border-color-transparent);
   color: var(--sgds-color-fixed-light);
+}
+
+.stepper .stepper-item.is-clickable:hover .stepper-detail,
+.stepper .stepper-item.is-clickable:focus .stepper-detail,
+.stepper .stepper-item.is-clickable:focus-visible .stepper-detail {
+  color: var(--sgds-primary-color-emphasis);
 }
 
 .stepper .stepper-item.is-clickable .stepper-detail,
@@ -116,12 +128,12 @@
 }
 
 .stepper .stepper-item.is-active .stepper-marker {
-  background-color: var(--sgds-primary-bg-default);
-  color:  var(--sgds-color-fixed-light);
+  background-color: var(--sgds-primary-surface-default);
+  color: var(--sgds-color-fixed-light);
 }
 
 .stepper .stepper-item.is-completed .stepper-marker {
-  background-color: var(--sgds-bg-default);
+  background-color: var(--sgds-bg-transparent);
   border: var(--sgds-border-width-2) solid var(--sgds-primary-border-color-default);
   color: var(--sgds-primary-color-default);
 }
