chore(*): add new css variable

--- a/src/themes/root.css
+++ b/src/themes/root.css
@@ -231,6 +231,7 @@
   --sgds-dimension-320: 320px;
   --sgds-dimension-384: 384px;
   --sgds-dimension-480: 480px;
+  --sgds-dimension-512: 512px;
   --sgds-dimension-688: 688px;
 
   /* Semantic - Padding */
