--- a/src/components/Drawer/drawer.css
+++ b/src/components/Drawer/drawer.css
@@ -40,7 +40,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 100%;
-  height: 512px;
+  height: var(--sgds-dimension-512);
 }
 
 .drawer-end .drawer-panel {
@@ -48,7 +48,7 @@
   inset-inline-end: 0;
   bottom: auto;
   inset-inline-start: auto;
-  width: 512px;
+  width: var(--sgds-dimension-512);
   height: 100%;
 }
 
@@ -58,7 +58,7 @@
   bottom: 0;
   inset-inline-start: 0;
   width: 100%;
-  height: 512px;
+  height: var(--sgds-dimension-512);
 }
 
 .drawer-start .drawer-panel {
@@ -66,7 +66,7 @@
   inset-inline-end: auto;
   bottom: auto;
   inset-inline-start: 0;
-  width: 512px;
+  width: var(--sgds-dimension-512);
   height: 100%;
 }
 
