chore(spinner): update label color

--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -37,6 +37,7 @@
 
 .spinner-label {
   font-size: var(--sgds-font-size-1);
+  color: var(--sgds-neutral-color-default);
 }
 
 @media (prefers-reduced-motion: reduce) {
