--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -15,6 +15,7 @@
 .sgds-col-2 { grid-column: span 2; }
 .sgds-col-3 { grid-column: span 3; }
 .sgds-col-4 { grid-column: span 4; }
+.sgds-col-none { display: none; }
 
 @media (min-width: 512px) {  /* sgds-breakpoint-sm */
   .sgds-grid {
@@ -33,6 +34,8 @@
   .sgds-col-sm-6 { grid-column: span 6; }
   .sgds-col-sm-7 { grid-column: span 7; }
   .sgds-col-sm-8 { grid-column: span 8; }
+  .sgds-col-sm-none { display: none; }
+  .sgds-col-none { display: revert; }
 }
 
 @media (min-width: 1024px) {  /* sgds-breakpoint-md */
@@ -56,6 +59,8 @@
   .sgds-col-md-10 { grid-column: span 10; }
   .sgds-col-md-11 { grid-column: span 11; }
   .sgds-col-md-12 { grid-column: span 12; }
+  .sgds-col-md-none { display: none; }
+  .sgds-col-sm-none { display: revert; }
 }
 
 @media (min-width: 1280px) {  /* sgds-breakpoint-lg */
@@ -79,6 +84,8 @@
   .sgds-col-lg-10 { grid-column: span 10; }
   .sgds-col-lg-11 { grid-column: span 11; }
   .sgds-col-lg-12 { grid-column: span 12; }
+  .sgds-col-lg-none { display: none; }
+  .sgds-col-md-none { display: revert; }
 }
 
 @media (min-width: 1440px) {  /* sgds-breakpoint-xl */
@@ -98,4 +105,6 @@
   .sgds-col-xl-10 { grid-column: span 10; }
   .sgds-col-xl-11 { grid-column: span 11; }
   .sgds-col-xl-12 { grid-column: span 12; }
+  .sgds-col-xl-none { display: none; }
+  .sgds-col-lg-none { display: revert; }
 }
