feat(table): update v3 simple table

--- a/cypress/apps/angular-app/src/components/table/table.component.html
+++ b/cypress/apps/angular-app/src/components/table/table.component.html
@@ -1,4 +1,4 @@
-<sgds-table tableheaders="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
+<sgds-table rowheader="[&quot;#&quot;, &quot;First Names&quot;, &quot;Last Name&quot;, &quot;Username&quot;]"
     tabledata="[
         [&quot;1&quot;, &quot;John&quot;, &quot;Doe&quot;, &quot;@johndoe&quot;],
         [&quot;2&quot;, &quot;Jane&quot;, &quot;Doe&quot;, &quot;@janedoe&quot;],
