--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -43,3 +43,11 @@ sgds-faq-grid {
 ul.toc-list > * {
   font-size: var(--sgds-font-size-1);
 }
+
+.grid-item {
+  background-color: var(--sgds-product-primary-600);
+  color: white;
+  text-align: center;
+  padding: 16px;
+  border-radius: 4px;
+}
