--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -5,6 +5,12 @@
   grid-template-columns: repeat(3, 1fr);
   align-items: stretch;
 }
+.container {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: stretch;
+}
 sgds-card.intro::part(base) {
   border: none;
   background-color: #f6f7fb;
