chore(*): update e2e test

--- a/cypress/apps/angular-app/src/app/app.component.html
+++ b/cypress/apps/angular-app/src/app/app.component.html
@@ -9,11 +9,16 @@
 <checkbox-component></checkbox-component>
 <combobox-component></combobox-component>
 <datepicker-component></datepicker-component>
+<description-list-component></description-list-component>
+<divider-component></divider-component>
 <drawer-component></drawer-component>
 <dropdown-component></dropdown-component>
 <fileupload-component></fileupload-component>
 <input-component></input-component>
 <icon-component></icon-component>
+<icon-button-component></icon-button-component>
+<icon-list-component></icon-list-component>
+<link-component></link-component>
 <modal-component></modal-component>
 <pagination-component></pagination-component>
 <progress-bar-component></progress-bar-component>
@@ -23,8 +28,10 @@
 <skeleton-component></skeleton-component>
 <spinner-component></spinner-component>
 <stepper-component></stepper-component>
+<switch-component></switch-component>
 <tab-component></tab-component>
 <table-component></table-component>
+<table-of-contents-component></table-of-contents-component>
 <textarea-component></textarea-component>
 <toast-component></toast-component>
 <tooltip-component></tooltip-component>
