--- a/cypress/apps/angular-app/src/components/sidenav/sidenav.component.html
+++ b/cypress/apps/angular-app/src/components/sidenav/sidenav.component.html
@@ -1,39 +1,45 @@
-<sgds-sidenav>
-    <sgds-sidenav-item href="">
-        <span slot="title">SideNav Item #1 (control by Argstable) </span>
-        <sgds-sidenav-link href="undefined">sgds-sidenav-link (control by Argstable)</sgds-sidenav-link>
-        <sgds-sidenav-link href="#" disabled="">sgds-sidenav-link</sgds-sidenav-link>
-        <sgds-sidenav-link href="#">sgds-sidenav-link</sgds-sidenav-link>
-    </sgds-sidenav-item>
+<sgds-sidenav class="mt-3" id="test-id">
     <sgds-sidenav-item>
-        <span slot="title">SideNav Item #2</span>
-        <span slot="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-layers-fill"
-                viewBox="0 0 16 16">
-                <path
-                    d="M7.765 1.559a.5.5 0 0 1 .47 0l7.5 4a.5.5 0 0 1 0 .882l-7.5 4a.5.5 0 0 1-.47 0l-7.5-4a.5.5 0 0 1 0-.882l7.5-4z">
-                </path>
-                <path
-                    d="m2.125 8.567-1.86.992a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882l-1.86-.992-5.17 2.756a1.5 1.5 0 0 1-1.41 0l-5.17-2.756z">
-                </path>
-            </svg>
+      <sgds-icon name="placeholder" slot="icon"></sgds-icon>
+      <span slot="title">
+        Title
+      </span>
+      <sgds-sidenav-link disabled>
+        <a href="#"> disbaED-test</a>
+      </sgds-sidenav-link>
+      <sgds-sidenav-link active>
+        <a href="#"> first-test</a>
+      </sgds-sidenav-link>
+      <sgds-sidenav-item>
+        <span slot="title">
+          Title level 2 very long so just wrap
         </span>
-        <sgds-sidenav-link href="#">sgds-sidenav-link</sgds-sidenav-link>
-        <sgds-sidenav-link href="#">sgds-sidenav-link</sgds-sidenav-link>
-        <sgds-sidenav-link href="#">sgds-sidenav-link</sgds-sidenav-link>
+        <sgds-sidenav-link>
+          <a href="#"> first-test</a>
+        </sgds-sidenav-link>
+        <sgds-sidenav-link>
+          <a href="#"> first-test</a>
+        </sgds-sidenav-link>
+
+      </sgds-sidenav-item>
+    </sgds-sidenav-item >
+    <sgds-sidenav-item disabled>
+      <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+      <span slot="title">
+        Title
+      </span>
+      <sgds-sidenav-link>
+        <a href="#"> first-test</a>
+      </sgds-sidenav-link>
+      <sgds-sidenav-link>
+        <a href="#"> first-test</a>
+      </sgds-sidenav-link>
+
     </sgds-sidenav-item>
-    <sgds-sidenav-item href="#">
-        <span slot="title">SideNav Item #3</span>
-        <span slot="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-layers-fill"
-                viewBox="0 0 16 16">
-                <path
-                    d="M7.765 1.559a.5.5 0 0 1 .47 0l7.5 4a.5.5 0 0 1 0 .882l-7.5 4a.5.5 0 0 1-.47 0l-7.5-4a.5.5 0 0 1 0-.882l7.5-4z">
-                </path>
-                <path
-                    d="m2.125 8.567-1.86.992a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882l-1.86-.992-5.17 2.756a1.5 1.5 0 0 1-1.41 0l-5.17-2.756z">
-                </path>
-            </svg>
-        </span>
+    <sgds-sidenav-item active >
+      <a href="#"> <sgds-icon slot="icon" name="placeholder"></sgds-icon>anchor</a>
     </sgds-sidenav-item>
-</sgds-sidenav>
+    <sgds-sidenav-item >
+      <a href="https://www.google.com"><sgds-icon slot="icon" name="placeholder"></sgds-icon> Google</a>
+    </sgds-sidenav-item>
+  </sgds-sidenav>
